# ShiVaStringmath

./: README.md
shiva20testproject_stringmath/Games/: stringmathTest.gam  stringmathTest.gam.bak  stringmathTest.udf
shiva20testproject_stringmath/Plugins/: com.shivatech.stringmath.edf
shiva20testproject_stringmath/Plugins/com.shivatech.stringmath/: Manifest.xml
shiva20testproject_stringmath/Plugins/com.shivatech.stringmath/Make/Android/: CMakeLists.txt
shiva20testproject_stringmath/Plugins/com.shivatech.stringmath/Make/HTML5/: StringMath.makefile
shiva20testproject_stringmath/Plugins/com.shivatech.stringmath/Make/Linux/: StringMath.makefile
shiva20testproject_stringmath/Plugins/com.shivatech.stringmath/Make/Mac/StringMath.xcodeproj/: project.pbxproj
shiva20testproject_stringmath/Plugins/com.shivatech.stringmath/Make/WinRT/: StringMath.sln  StringMath.vcxproj  StringMath.vcxproj.filters
shiva20testproject_stringmath/Plugins/com.shivatech.stringmath/Make/Windows/: StringMath.sln  StringMath.vcxproj  StringMath.vcxproj.filters
shiva20testproject_stringmath/Plugins/com.shivatech.stringmath/Make/iOS/StringMath.xcodeproj/: project.pbxproj
shiva20testproject_stringmath/Plugins/com.shivatech.stringmath/Make/tvOS/StringMath.xcodeproj/: project.pbxproj
shiva20testproject_stringmath/Plugins/com.shivatech.stringmath/Sources/: Plugin.cpp  Plugin.h  sm.cpp  sm.h
shiva20testproject_stringmath/Plugins/com.shivatech.stringmath/Sources/S3DX/: S3DXAIEngineAPI.h  S3DXAIVariable.h  S3DXAIVariables.h  S3DXConfig.h  S3DXPlatform.h  S3DXTypes.h
shiva20testproject_stringmath/Resources/AIModels/: stringmathTest.aim  stringmathTest.aim.bak
shiva20testproject_stringmath/Resources/Scripts/: stringmathTest_Handler_onInit.lua  stringmathTest_Handler_onInit.lua.bak
